--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="milli_styles.css" />
+        <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet" /> 
          
         
         <div class="topnav">
@@ -30,19 +31,18 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <img id="my_face" src="My_Face.jpg" alt="">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis consectetur quo iusto nulla ducimus placeat, laboriosam iure earum, odit et vitae illo aliquam laudantium repellendus quasi debitis nostrum asperiores? Culpa.
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur temporibus, placeat praesentium tempora delectus eius atque culpa ipsam quae obcaecati accusantium soluta. Ratione unde enim odio nihil perspiciatis, ad quia?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae quibusdam, quae est sequi rerum quod fuga repellat nesciunt amet doloribus neque aut deserunt, eos suscipit omnis odio corrupti ducimus vero!Lorem
         </p>
         <br>
         <br>
+        <h2>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        </h2>      
         <br>
         <br>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis repellat modi quisquam animi debitis aperiam delectus doloremque incidunt, quae molestias possimus maiores sequi tempore repellendus eius perspiciatis? Nostrum, dolorum ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit recusandae nam sit sint voluptate praesentium, nostrum blanditiis aperiam enim asperiores quasi dolorum, mollitia voluptas voluptatem, similique est pariatur cumque voluptatibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nam repellendus eveniet necessitatibus tempore nihil nesciunt non blanditiis delectus totam officia ad, voluptate molestiae odio nostrum adipisci dolorem? Saepe, quasi?</p>
         <br>
         <br>
         <br>
