--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#">Link</a>
             <a href="#">Experience</a>
             <a href="#">Contact</a>
+            <a href="#">Work Experience</a>
           </div>
       
     </head>
