Added Contact  Page
Added contact page and started to fix my spacing for certain pages

--- a/index.html
+++ b/index.html
@@ -75,49 +75,31 @@
         <h1 id="coursework">Relevant Coursework:</h1>
         <p>Honors Biology, Honors Algebra 1, Honors English 1/2/3/4/5/6, World History Honors, AP Computer Science and Principles, Japanese 1/2/3/4/5/6, Advanced Show Choir, Marching Band, Wind Ensemble, ischool (online school), Anatomy & Physiology, Precalculus, Cambridge Academy</p>
         <br>
-        <h1>Work Experience</h1>
+        <h1 id="extracurricular">Extracurricular Activites</h1>
          <div>
              <ol>
                  <li><span>Valley Vista High School Men's Volleyball (5/2018 - Present)</span>
-                    <br>
-                    <p> 
-                        Member since 2018, attended summer skills training for Valley Vista High School Men’s volleyball
-                        </p></li>
+                    <p>Member since 2018, attended summer skills training for Valley Vista High School Men’s volleyball</p></li>
                         
                  <li><span>Valley Vista High School Marching Band (5/2016 - Present)</span>
-                    <br>
-                    <p>
-                    Member since 2016, attend Band Camp, practice and memorize various pieces of music, attend and perform at most football games, attend competitions on most Saturdays, perform at parades and festivals, physical training, learn marching technique and drill, various fundraising
-                    </p></li>
+                    <p>Member since 2016, attend Band Camp, practice and memorize various pieces of music, attend and perform at most football games, attend competitions on most Saturdays, perform at parades and festivals, physical training, learn marching technique and drill, various fundraising</p></li>
                     
                  <li><span>Valley Vista High School Marching Band Student Council (5/2018 - Present)</span>
-                    <br>
-                    <p>
-                                Member since 2018, leader of marching band section, teach other people to become better musician, become a leader in   band, various fundraising</p></li>
+                    <p>Member since 2018, leader of marching band section, teach other people to become better musician, become a leader in   band, various fundraising</p></li>
 
                  <li><span>Japanese Dance Committee (1/2017 - 1/2018)</span>
-                    <br>
-                    <p>
-                     Member since 2017, Study and perform Japanese dances</p></li>
+                    <p>Member since 2017, Study and perform Japanese dances</p></li>
 
-                 <li><span>Japanese Club (1/2016 - Present)</span>
-                    <br>    
-                    <p>
-                    Member since 2016, study Japanese culture, lifestyle, participate and host in events, attend festival
-                    </p></li>
+                 <li><span>Japanese Club (1/2016 - Present)</span>   
+                    <p>Member since 2016, study Japanese culture, lifestyle, participate and host in events, attend festival</p></li>
 
                  <li><span>Valley Vista High School Show Choir (5/2016 - Present) </span>
-                    <br>
-                    <p>
-                  Member since 2016, practice reading music, singing, memorizing choreography while singing, attend competition second semester of each year, various fundraising
-                    </p></li>
+                    <p>Member since 2016, practice reading music, singing, memorizing choreography while singing, attend competition second semester of each year, various fundraising</p></li>
 
                  <li><span>West Valley Warriors Club Basketball (AAU) (8/2009 - 1/2015)</span>
-                    <br>
                     <p> Member since 2009-2015, professional basketball, skills, training in basketballs skills, leadership, basketball tournaments (in and out-of-state), various acts of community service, (Homeless shelters, community gardens, Retirement centers, Women's/children shelters, etc.)</p></li>
 
                  <li><span>Drama Club (8/2012 - Present)</span>
-                    <br>
                     <p>Member since 2012-Present Day, participate in musicals and plays, learn to read scripts   and engage with audience, learn how to act.</p></li>
 
                  <li><span>Student Council (8/2014 - 8/2016)</span>
@@ -141,8 +123,31 @@
         <br>
         <br>
         <br>
+        <h1 id="contact">Contact</h1>
         <br>
         <br>
+        d 
+<div class="col-1-3">"
+  <form method="POST" action="https://formspree.io/mjohnson030@west-mec.org">
+   <input type="email" name="email" placeholder="Your Email">
+   <br>
+   <br>
+   <br>
+   <input type="name" name="name" placeholder="Full Name">
+   <br>
+   <br>
+   <br>
+   <input type="subject" name="subject" placeholder="Subject">
+   <br>
+   <br>
+   <br>
+   <textarea name="message" placeholder="Message"></textarea>
+   <br>
+   <br>
+   <br>
+   <button type="submit">Submit</button>
+  </form>
+ </div>
         <br>
         <br>
         <br>
